--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "nodemon app.js ",
     "dev": "gulp dev  --env dev"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^6.7.5",
     "axios": "^0.16.2",
@@ -46,6 +45,7 @@
     "imagemin-pngquant": "^5.0.0",
     "inquirer": "^3.1.1",
     "koa": "^1.2.1",
+    "koa-static": "^1.5.2",
     "less-plugin-autoprefix": "^1.5.1",
     "minimist": "^1.2.0",
     "nodemon": "^1.10.2",
